--- a/views/website/index.ejs
+++ b/views/website/index.ejs
@@ -25,6 +25,7 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/custom.css">
     <!-- propeller -->
     <meta name="propeller" content="9916a21cd1a0d6462ef6ce3e1d43e047">
+    
 
     </head>
     
@@ -679,6 +680,8 @@
             </div>
         </div>
     </footer>
+    <!-- propeller -->
+    <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://iclickcdn.com/tag.min.js',4910317,document.body||document.documentElement)</script>
     <!-- ejs -->
     <script src="assets/js/ejs.min.js"></script>
 
