--- a/views/dashboard/dashboard-post.ejs
+++ b/views/dashboard/dashboard-post.ejs
@@ -248,6 +248,7 @@
                         <ul aria-expanded="false">
                             <li><a href="./dashboard">Pagina Principal</a></li>
                             <li><a href="#/">Publicações</a></li>
+                            <li><a href="./browse">browse</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -271,12 +272,13 @@
 
             <div class="container-fluid">
                 <div class="row">
-                 <!-- primeira area start -->
+                    <!-- primeira area start -->
                     <div class="col-lg-12">
                         <div class="card">
                             <div class="card-body">
                                 <h4 class="card-title">Área Principal</h4>
                                 <p class="text m-b-15 f-s-12">Defina aqui o titulo, banner é a descrição.</p>
+                                <p class="text m-b-15 f-s-12"><strong>IMPORTANTE</strong> não use  espaço.</p>
                                 <div class="basic-form">
                                     <form>
                                         <div class="form-group">
@@ -285,7 +287,7 @@
                                     </form>
                                 </div>
                                 <h5 class="card-title">Imagem do banner</h5>
-                                <p class="text m-b-15 f-s-12">Defina.</p>
+                                <p class="text m-b-15 f-s-12">Defina imagem do banner.</p>
                                 <div class="basic-form">
                                     <form>
                                         <div class="form-group">
@@ -307,6 +309,45 @@
                     </div>
                      <!-- primeira area end -->
 
+                    <!-- TAG start -->
+                    <div class="col-lg-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <!--  -->
+                                <h5 class="card-title">Tag</h5>
+                                <p class="text m-b-15 f-s-12">Defina aqui a Tag</p>
+                                <div class="basic-form">
+                                    <form>
+                                        <div class="form-group">
+                                            <input id="tag" type="text" class="form-control input-default" placeholder="Digite aqui a Tag">
+                                        </div>
+                                    </form>
+                                </div>
+                                    <!--  -->
+                              <h5 class="card-title">Cor</h5>
+                                <p class="text m-b-15 f-s-12">Defina aqui a cor da Tag</p>
+                                <div class="basic-form">
+                                    <form>
+                                        <div class="form-group">
+                                            <input id="tag_cor" type="color" class="form-control input-default" >
+                                        </div>
+                                    </form>
+                                </div>
+                                <!--  -->
+                                <h5 class="card-title">Cor do texto</h5>
+                                <p class="text m-b-15 f-s-12">Defina aqui a cor do texto</p>
+                                <div class="basic-form">
+                                    <form>
+                                        <div class="form-group">
+                                            <input id="cor_texto" type="color" class="form-control input-default" >
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- TAG end -->
+
                     <!-- conteudo start -->
                     <div id="conteudo" class="col-lg-12">
                         <div id="primeiro_card" class="card">
@@ -316,7 +357,7 @@
                                 <div class="basic-form">
                                     <form>
                                         <div class="form-group">
-                                            <input  type="file" class="form-control-file img-content">
+                                            <input   type="file" class="form-control-file img-content">
                                         </div>
                                     </form>
                                 </div>
@@ -340,41 +381,10 @@
                                         </div>
                                     </form>
                                 </div>
-                                
-                            </div>
-                            <div class="card-body card-content">
-                                <h5 class="card-title">Imagem</h5>
-                                <p class="text m-b-15 f-s-12 fw-bold">Caso o campo não seja preenchido, não haver imagem nessa seção.</p>
-                                <div class="basic-form">
-                                    <form>
-                                        <div class="form-group">
-                                            <input  type="file" class="form-control-file img-content">
-                                        </div>
-                                    </form>
-                                </div>
-                                <h5 class="card-title">Video</h5>
-                                <p class="text m-b-15 f-s-12">Caso o campo não seja preenchido, não haver imagem nessa seção.</p>
-                                <p class="text m-b-15 f-s-12">Copie o iframe do video que gostaria de adicionar.</p>
-                                <div class="basic-form">
-                                    <form>
-                                        <div class="form-group">
-                                            <label>Iframe do Video:</label>
-                                            <textarea  class="form-control h-150px video_iframe" rows="6" id="comment" placeholder="Digite Aqui o Iframe do video"></textarea>
-                                        </div>
-                                    </form>
-                                </div>
-                                <h5 class="card-title">Paragrafo</h5>
-                                <div class="basic-form">
-                                    <form>
-                                        <div class="form-group">
-                                            <label>Paragrafo:</label>
-                                            <textarea class="form-control h-150px paragrafo_content" rows="6" id="comment" placeholder="Digite Aqui o Paragrafo"></textarea>
-                                        </div>
-                                    </form>
-                                </div>
-                                
                                 <button id="btn_plus" class="btn btn-outline-dark" onclick="addconteudo()" type="button"><i class="fa-solid fa-plus"></i></button>
+
                             </div>
+
                         </div>
                     </div>
                     <!-- conteudo end -->
@@ -383,14 +393,54 @@
                     <div class="col-lg-12">
                         <div class="card">
                             <div class="card-body">
+                                <!--  -->
                                 <h4 class="card-title">Área de Download</h4>
+                                <p class="text m-b-15 f-s-12">Defina aqui os links de download, tipos de anuncio e outros.</p>
+                                <!--  -->
+                                <h5 class="card-title">Link do Butão de Download</h5>
                                 <div class="basic-form">
                                     <form>
                                         <div class="form-group">
-                                            <input id="download" type="text" class="form-control input-default" placeholder="Digite aqui o link do butãlo de download">
+                                            <label>Digite aqui o link do butão de download:</label>
+                                            <input id="download" type="text" class="form-control input-default" placeholder="Digite aqui o link do butão de download">
                                         </div>
                                     </form>
                                 </div>
+                                <!--  -->
+                                <h5 class="card-title">Scripts</h5>
+                                <p class="text m-b-15 f-s-12"> <strong>IMPORTANTE</strong> coloque apenas os <code> < scripts > </code> </p>
+                                <div class="basic-form">
+                                    <form>
+                                        <div class="form-group">
+                                            <label>Digite os Scripts Copiados:</label>
+                                            <textarea id="scripts" class="form-control h-150px scripts" rows="6" id="comment" placeholder="Digite Aqui os scripts"></textarea>
+                                        </div>
+                                    </form>
+                                </div>
+                                <!--  -->
+                                <h5 class="card-title">Banners</h5>
+                                <p class="text m-b-15 f-s-12">Defina aqui os banners acima e abaixo do botão de download.</p>
+                                <p class="text m-b-15 f-s-12"> <strong>IMPORTANTE</strong> coloque apenas as <code> < div > </code> </p>
+                                <h6 class="card-title">Banner Acima</h6>
+                                <div class="basic-form">
+                                    <form>
+                                        <div class="form-group">
+                                            <label>Defina aqui o banner acima do butão de download:</label>
+                                            <input id="banner_acima" type="text" class="form-control input-default" placeholder="Defina aqui os banner acima do butão de download">
+                                        </div>
+                                    </form>
+                                </div>
+
+                                <h6 class="card-title">Banner Abaixo</h6>
+                                <div class="basic-form">
+                                    <form>
+                                        <div class="form-group">
+                                            <label>Defina aqui o banner abaixo do butão de download:</label>
+                                            <input id="banner_abaixo" type="text" class="form-control input-default" placeholder="Defina aqui o banner acima do butão de download">
+                                        </div>
+                                    </form>
+                                </div>
+                                <!--  -->
                             </div>
                         </div>
                     </div>
