--- a/views/website/post.ejs
+++ b/views/website/post.ejs
@@ -92,7 +92,7 @@
             <div class="container row width-100vw">
                 <div class="container-download" data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
                     <!-- anuncio  -->
-                    <div class="ad container-ad container">
+                    <div style="overflow: hidden;" id="acima" class="ad container-ad container">
                         anuncio
                     </div>
                     <!-- butao -->
@@ -100,7 +100,7 @@
                         <button  class="butão gradiente-3">DOWNLOAD</button>
                     </a>
 
-                    <div class="ad container-ad container">
+                    <div style="overflow: hidden;" id="abaixo" class="ad container-ad container">
                         anuncio
                     </div>
                     <!-- anuncio -->
@@ -158,7 +158,11 @@
                 </div>
             </div>
         </footer>
-    
+        <div id="scripts">
+
+        </div>
+
+
         <!-- jQuery -->
         <script src="/assets/js/jquery-2.1.0.min.js"></script>
 
@@ -175,6 +179,7 @@
         <!-- Global Init -->
         <script src="/assets/js/custom.js"></script>
         <script src="/assets/js/personalizado.js"></script>
+
 
 </body>
 </html>
