--- a/views/dashboard/dashboard-post.ejs
+++ b/views/dashboard/dashboard-post.ejs
@@ -247,7 +247,7 @@
                         </a>
                         <ul aria-expanded="false">
                             <li><a href="./dashboard">Pagina Principal</a></li>
-                            <li><a href="#/">Publicações</a></li>
+                            <li><a href="#">Publicações</a></li>
                             <li><a href="./browse">browse</a></li>
                         </ul>
                     </li>
