--- a/views/dashboard/dashboard.ejs
+++ b/views/dashboard/dashboard.ejs
@@ -362,7 +362,7 @@
                     <div class="col-lg-12">
                         <div class="card">
                             <div class="card-body">
-                                <h4 class="card-title">Links</h4>
+                                <h4 class="card-title">Ganhe Dinheiro</h4>
                                 <div class="basic-form ">
                                     <form class="formulario">
                                         <div class="form-row align-items-center">
@@ -408,7 +408,7 @@
                                     <form>
                                         <div class="form-group">
                                             <label>Defina aqui o Banner da Área dos Mais Baixados:</label>
-                                            <input id="banner_mais_baixados" type="text" class="form-control input-default" placeholder="Defina aqui os banner acima do butão de download">
+                                            <input id="banner_mais_baixados" type="text" class="form-control input-default" placeholder="Defina aqui o Banner da Área dos Mais Baixados">
                                         </div>
                                     </form>
                                 </div>
@@ -418,7 +418,7 @@
                                     <form>
                                         <div class="form-group">
                                             <label>Defina aqui o Banner da Área de Mods</label>
-                                            <input id="banner_mods" type="text" class="form-control input-default" placeholder="Defina aqui o banner acima do butão de download">
+                                            <input id="banner_mods" type="text" class="form-control input-default" placeholder="Defina aqui o Banner da Área de Mods">
                                         </div>
                                     </form>
                                 </div>
@@ -428,18 +428,18 @@
                                     <form>
                                         <div class="form-group">
                                             <label>Defina aqui o Banner da Área de Aplicativos:</label>
-                                            <input id="banner_aplicativos" type="text" class="form-control input-default" placeholder="Defina aqui o banner acima do butão de download">
+                                            <input id="banner_aplicativos" type="text" class="form-control input-default" placeholder="Defina aqui o Banner da Área de Aplicativos">
                                         </div>
                                     </form>
                                 </div>
                                 <!--  -->
                                 <!--  -->
-                                <h6 class="card-title">Banner da Área de Links</h6>
+                                <h6 class="card-title">Banner da Área de Ganhe Dinheiro</h6>
                                 <div class="basic-form">
                                     <form>
                                         <div class="form-group">
-                                            <label>Defina aqui o Banner da Área de Links:</label>
-                                            <input id="banner_links" type="text" class="form-control input-default" placeholder="Defina aqui o banner acima do butão de download">
+                                            <label>Defina aqui o Banner da Área de Ganhe Dinheiro:</label>
+                                            <input id="banner_links" type="text" class="form-control input-default" placeholder="Defina aqui o Banner da Área de Ganhe Dinheiro">
                                         </div>
                                     </form>
                                 </div>
