--- a/views/website/index_save.ejs
+++ b/views/website/index_save.ejs
@@ -60,7 +60,7 @@
                         <ul class="nav">
                             <li><a href="#mods" class="">Mods</a></li>
                             <li><a href="#aplicativos">Aplicativos</a></li>
-                            <li><a href="#links">Links</a></li>
+                            <li><a href="#links">Ganhe Dinheiro</a></li>
                         </ul>
                         <a class='menu-trigger'>
                             <span>Menu</span>
@@ -76,7 +76,6 @@
     <!-- ***** Welcome Area Start ***** -->
     <div class="welcome-area" id="welcome">
         <div class="container">
-
 
                 <div class="container-barra">
                     <div class="barra_menu">
@@ -200,7 +199,7 @@
         <div class="container">
             <div class="row  section-grid">    
                 <div id="links" class="separador gradiente-4">
-                    <h1>Links</h1>
+                    <h1>Ganhe Dinheiro</h1>
                 </div>
             <div id="links_1" class="container-post container">
 
