--- a/views/website/post.ejs
+++ b/views/website/post.ejs
@@ -81,9 +81,6 @@
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non voluptatum minima inventore, mollitia, tempore voluptatibus atque fugiat harum eius, quos quaerat? Sit cupiditate eveniet laboriosam iure facere eum, rem laudantium impedit, doloremque voluptatibus eligendi labore modi amet reprehenderit illum omnis! Ipsum, aliquam, aut soluta dignissimos sunt dolorem impedit distinctio necessitatibus natus consectetur omnis. Quidem, facere eos. Illum ratione atque doloremque exercitationem neque consectetur eius vero sequi? Soluta quia, vero delectus praesentium minima, sit accusamus iste aut deleniti iure facere, aliquam tempore. Eaque laborum odio quam nostrum? Officiis fugiat sint cum, dolorem quaerat id! Id veritatis similique obcaecati molestiae quos ab iste adipisci. Ad quas reiciendis eaque maxime doloremque reprehenderit? Officia dolor, sapiente error numquam dolorem ipsa in optio iusto obcaecati rerum aliquid saepe ex modi enim mollitia minus asperiores tenetur magni exercitationem necessitatibus ducimus expedita veritatis laudantium? Aliquid impedit consequatur quasi doloremque beatae hic, ad nisi at. Est, assumenda dicta?
                 </p>
             </div>
-            <div class="ad container-ad container">
-                anuncio
-            </div>
         </div>
         <!-- ***** Welcome-Area End ***** -->
         
@@ -96,7 +93,7 @@
                         anuncio
                     </div>
                     <!-- butao -->
-                    <a id="link_btn_download" href="#/">
+                    <a id="link_btn_download" href="#/" target="_blank">
                         <button  class="butão gradiente-3">DOWNLOAD</button>
                     </a>
 
